--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body {
 .App {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     padding-top: 1.5rem;
@@ -43,4 +44,19 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+
+.texto-final {
+    color: white;
+    font-size: 1rem;
+}
+
+a {
+    text-decoration: none;
+    color: blueviolet;
+}
+
+a:hover {
+    color: #2c81d6;
 }
